Add Heroku Files

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
     "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "tsc:w": "tsc -w",
+    "postinstall": "ng build --aot -prod",
+    "start": "node Server.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -30,6 +32,7 @@
     "@types/node": "^8.0.53",
     "concurrently": "^3.1.0",
     "lite-server": "^2.3.0",
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "angular-cli": "1.0.0-beta.28.3"
   }
 }
